--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,5 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
 
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
 on:
   push:
     branches: [ master ]
@@ -11,14 +7,31 @@ on:
     branches: [ master ]
 
 jobs:
-  # This workflow contains a single job called "build"
+  check:
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Lint
+        run: npm run lint
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Deploy to Firebase
-      uses: lowply/deploy-firebase@v0.0.2
-      env:
-        FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-        FIREBASE_PROJECT: ${{ secrets.FIREBASE_PROJECT }}
+    - name: Install dependencies
+      run: npm install
+    - name: Init firebase
+      run: echo "{{ secrets.FIREBASERC }}" > .firebaserc
+    - name: Build app
+      run: npm run build
+  deploy:
+     runs-on: ubuntu-latest
+     
+     steps:
+       - name: Deploy to firebase
+         uses: w9jds/firebase-action@master
+         with:
+           args: deploy
+         env:
+           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }} 
