--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,10 +13,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Install dependecies
+        run: npm install
       - name: Lint
         run: npm run lint
   build:
     runs-on: ubuntu-latest
+    needs: check
 
     steps:
     - name: Checkout
@@ -32,6 +35,7 @@ jobs:
         path: build
   deploy:
      runs-on: ubuntu-latest
+     needs: build
      
      steps:
        - name: Download build
