--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "npx eslint --ext=ts,tsx src"
+    "lint": "npx eslint --ext=ts,tsx src",
+    "lint:report": "npx eslint -o eslint-report.json -f json --ext=ts,tsx src"
   },
   "eslintConfig": {
     "extends": "react-app"
